# split-pdf-to-md

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  LICENSE  PHASE1_REPORT.md  PHASE2_REPORT.md  PHASE3_REPORT.md  README.md  SPEC.md  config.example.yaml  docker-compose.yml  pyproject.toml  requirements-full.txt  requirements-lite.txt  requirements.txt
.claude/skills/: split-pdf-to-md.md
src/: config.py  main.py  md_postprocess.py  page_classifier.py  pdf_splitter.py  pdf_to_md.py  range_extractor.py  table_extractor.py  toc_scanner.py  utils.py
tests/: conftest.py  test_config.py  test_integration.py  test_md_postprocess.py  test_page_classifier.py  test_pdf_splitter.py  test_pdf_to_md.py  test_range_extractor.py  test_table_extractor.py
