[project]
name = "split-pdf-to-md"
version = "0.1.0"
description = "Split large PDFs via natural language descriptions and convert to LLM-optimized Markdown"
requires-python = ">=3.10"
dependencies = [
    "pypdf>=4.0",
    "anthropic>=0.40",
]

[project.optional-dependencies]
marker = ["marker-pdf>=1.0"]
pymupdf = ["pymupdf4llm>=0.0.10", "pymupdf>=1.24"]
dev = ["pytest>=8.0", "pytest-cov>=5.0", "ruff>=0.4"]

[project.scripts]
split-pdf = "src.main:main"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
